objects/EUR_CRM_Visit_Action__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>EUR_CRM_Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Activation_End_Date__c</fullName>
        <label>Activation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Activation_Start_Date__c</fullName>
        <label>Activation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_No_of_Display__c</fullName>
        <description>Input by SR in the app, to be syc to the field of Actual No. of Display in O/P Target (EU)
PR PT is the 1st country using this field.</description>
        <label>Actual No. of Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actualized_Addl_Pcnt_ShelfShare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actualized Additional % of Shelf Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actualized_Addl_Prod_Placements__c</fullName>
        <label>Actualized Additional Product Placements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actualized_No_of_Facings__c</fullName>
        <label>Actualized No. of Facings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Ad_Hoc_Promo_Type_Multi__c</fullName>
        <label>Ad Hoc Promo Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAP</fullName>
                </value>
                <value>
                    <fullName>Price Discount</fullName>
                </value>
                <value>
                    <fullName>Free Goods</fullName>
                </value>
                <value>
                    <fullName>Animations</fullName>
                </value>
                <value>
                    <fullName>Sampling</fullName>
                </value>
                <value>
                    <fullName>Tasting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Ad_Hoc_Promo_Type__c</fullName>
        <description>ZA Ad Hoc O/P</description>
        <label>Ad Hoc Promo Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scratch Cards</fullName>
                </value>
                <value>
                    <fullName>Shooter Girls</fullName>
                </value>
                <value>
                    <fullName>In-Store Sampling</fullName>
                </value>
                <value>
                    <fullName>Value Add</fullName>
                </value>
                <value>
                    <fullName>Lucky Draw</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Tastings</fullName>
                </value>
                <value>
                    <fullName>Promotion Girls</fullName>
                </value>
                <value>
                    <fullName>Combo Deal</fullName>
                </value>
                <value>
                    <fullName>Gondola End Front</fullName>
                </value>
                <value>
                    <fullName>Gondola End Middle</fullName>
                </value>
                <value>
                    <fullName>Gondola End Back</fullName>
                </value>
                <value>
                    <fullName>Side Stack  / FSU Front</fullName>
                </value>
                <value>
                    <fullName>Side Stack  / FSU Middle</fullName>
                </value>
                <value>
                    <fullName>Side Stack  / FSU Back</fullName>
                </value>
                <value>
                    <fullName>Cabinet Display</fullName>
                </value>
                <value>
                    <fullName>Till Point Display</fullName>
                </value>
                <value>
                    <fullName>Counter Top Display</fullName>
                </value>
                <value>
                    <fullName>Shelf Top Display</fullName>
                </value>
                <value>
                    <fullName>BOB - Family Stand</fullName>
                </value>
                <value>
                    <fullName>Counter Top</fullName>
                </value>
                <value>
                    <fullName>BOB - POS Display</fullName>
                </value>
                <value>
                    <fullName>BOB - Bottle Display</fullName>
                </value>
                <value>
                    <fullName>Price Discount</fullName>
                </value>
                <value>
                    <fullName>Buy &amp; Get</fullName>
                </value>
                <value>
                    <fullName>Live promo</fullName>
                </value>
                <value>
                    <fullName>Tasting/Welcome Drink</fullName>
                </value>
                <value>
                    <fullName>Sponsored Events</fullName>
                </value>
                <value>
                    <fullName>Combo pack</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_AgeGrpsOfPromoParticipants__c</fullName>
        <label>Age Group(s) of Promo Participants</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>18-24 yrs</fullName>
                </value>
                <value>
                    <fullName>25-34 yrs</fullName>
                </value>
                <value>
                    <fullName>35-44 yrs</fullName>
                </value>
                <value>
                    <fullName>&gt; 45 yrs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Agreement_Failed_Reason__c</fullName>
        <label>Agreement Failed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article isn‘t  listed in the outlet</fullName>
                </value>
                <value>
                    <fullName>Display not available</fullName>
                </value>
                <value>
                    <fullName>Floor space too small</fullName>
                </value>
                <value>
                    <fullName>Slight rotation</fullName>
                </value>
                <value>
                    <fullName>No cooperation required</fullName>
                </value>
                <value>
                    <fullName>No advertisement</fullName>
                </value>
                <value>
                    <fullName>Shop Partner not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality-Size</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>EUR_CRM_Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Quality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>EUR_CRM_Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand (EU)</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>Visit Action (EU)</relationshipLabel>
        <relationshipName>Visit_Action_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CmntsToImprPOSMAttractiveness__c</fullName>
        <label>Comments to Improve POSM Attractiveness</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CommentsAboutPOSMQuality__c</fullName>
        <label>Comments About POSM Quality</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_CommentsAboutPromoMechanics__c</fullName>
        <label>Comments About Promo Mechanics</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ConsReactionUponRcvPrize__c</fullName>
        <label>Consumer&apos;s Reaction Upon Receiving Prize</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very Happy</fullName>
                </value>
                <value>
                    <fullName>Happy</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Disappointed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Current_Performance__c</fullName>
        <label>Current Performance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;= 90% (Full)</fullName>
                </value>
                <value>
                    <fullName>&gt;= 50%</fullName>
                </value>
                <value>
                    <fullName>&lt; 50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Desc_of_Promo_Module_in_Leaflet__c</fullName>
        <description>PR RU - Enter in the Actual placement of Promo Module in the Leaflet</description>
        <label>Description of Promo Modules in Leaflet</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Display_Type__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Razz Fazz</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Gondelkopf</fullName>
                </value>
                <value>
                    <fullName>Branded Pallets</fullName>
                </value>
                <value>
                    <fullName>Non-Branded Pallets</fullName>
                </value>
                <value>
                    <fullName>Branded Column</fullName>
                </value>
                <value>
                    <fullName>Non-Branded Column</fullName>
                </value>
                <value>
                    <fullName>Non-Branded Racks</fullName>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>Hanger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Datetime__c</fullName>
        <formula>EUR_CRM_Visit_ID__r.EUR_CRM_End_Datetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Entitle_Achievement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entitle Achievement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Execution_Date__c</fullName>
        <description>PR ZA - used in Ad Hoc Promos to indicate the actual execution / activation date.</description>
        <label>Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Execution_End_Date__c</fullName>
        <label>Execution End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Execution_Start_Date__c</fullName>
        <label>Execution Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Failure_to_Pay_Rebate_Reason__c</fullName>
        <label>Failure to Pay Rebate Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revision in Rebate Structure</fullName>
                </value>
                <value>
                    <fullName>To be Paid Later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Grouping_Type__c</fullName>
        <label>Grouping Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Indiv_Account_OP_Name__c</fullName>
        <description>PR Finland - Indiv Account O/P name</description>
        <label>Indiv Account O/P Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Accrued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Accrued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Promo_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is created for PR BG. This is for SR to indicate in Mobile App whether the promotion is active in the outlet.</description>
        <label>Is Promo Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Promotion_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Promotion Visible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Successful?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Leaflet_Code__c</fullName>
        <label>Leaflet Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price Off</fullName>
                </value>
                <value>
                    <fullName>x+1</fullName>
                </value>
                <value>
                    <fullName>KIM&apos;s</fullName>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>FGH Package</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Spyder_Displays_Placed__c</fullName>
        <label>Number of Spyder Displays Placed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Non_Execution_Reason__c</fullName>
        <label>Non-Execution Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No POSM</fullName>
                </value>
                <value>
                    <fullName>Not in Listing</fullName>
                </value>
                <value>
                    <fullName>OOS Product</fullName>
                </value>
                <value>
                    <fullName>No Central Office Order</fullName>
                </value>
                <value>
                    <fullName>Manager Refusal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_of_Facings__c</fullName>
        <label>Number of Facings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_of_Listing__c</fullName>
        <label>Number of Listing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Number_of_People__c</fullName>
        <label>Number of People</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OP_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to map a Visit Action back to the corresponding O/P Action Template Action</description>
        <label>O/P Action</label>
        <referenceTo>EUR_CRM_ObjPromo_Action__c</referenceTo>
        <relationshipName>Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>O/P Target</label>
        <referenceTo>EUR_CRM_ObjPromo_Target__c</referenceTo>
        <relationshipName>EUR_CRM_Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective / Promotion</label>
        <referenceTo>EUR_CRM_ObjPromo__c</referenceTo>
        <relationshipName>EUR_CRM_Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Firstly created for PR BG: Create new Visit Action by Publishing Central Objective in EUR_CRM_GB_Objective__c.</description>
        <label>Objective (EU)</label>
        <referenceTo>EUR_CRM_GB_Objective__c</referenceTo>
        <relationshipLabel>Visit Action (EU)</relationshipLabel>
        <relationshipName>Visit_Action_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM_Setup_Conditions__c</fullName>
        <label>POSM Setup Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Front of Outlet</fullName>
                </value>
                <value>
                    <fullName>Back of Outlet</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Entrance</fullName>
                </value>
                <value>
                    <fullName>Spirits Section</fullName>
                </value>
                <value>
                    <fullName>Payment Zone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_POSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material (EU)</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>Visit Action (EU)</relationshipLabel>
        <relationshipName>Visit_Action_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Implemented__c</fullName>
        <label>POS Implemented</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Participation_Declined_Reason__c</fullName>
        <label>Participation Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer has no interest</fullName>
                </value>
                <value>
                    <fullName>Product not listed</fullName>
                </value>
                <value>
                    <fullName>Customer has competitor as pouring</fullName>
                </value>
                <value>
                    <fullName>Action period reserved</fullName>
                </value>
                <value>
                    <fullName>No communication from customer HQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PctOfConsInterestedInPromo__c</fullName>
        <label>% of Consumers Interested in Promo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 30%</fullName>
                </value>
                <value>
                    <fullName>30 - 60%</fullName>
                </value>
                <value>
                    <fullName>&gt; 60%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_PctOfConsWantToParticipate__c</fullName>
        <label>% of Consumers Wanting To Participate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 30%</fullName>
                </value>
                <value>
                    <fullName>30 - 50%</fullName>
                </value>
                <value>
                    <fullName>&gt; 50%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Placed_An_Order_Failed_Reason__c</fullName>
        <label>Placed An Order Failed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product not available in order sheet</fullName>
                </value>
                <value>
                    <fullName>Acceptance refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Placed_An_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DE Distribution Drive</description>
        <label>Placed An Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_PlacementPositionWithinDisplay__c</fullName>
        <label>Placement Position Within Display</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Front</fullName>
                </value>
                <value>
                    <fullName>Middle</fullName>
                </value>
                <value>
                    <fullName>Back</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Toolkit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Toolkit</label>
        <referenceTo>EUR_CRM_Product_Toolkit__c</referenceTo>
        <relationshipName>Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Products_Were_Placed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products Were Placed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promo_Kit_Quantity__c</fullName>
        <description>Initially for RU ON Phase 2</description>
        <label>Promo Kit Quantity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promo_Matl_Est_Asmt__c</fullName>
        <label>Promo Material Estimate and Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor Quality</fullName>
                </value>
                <value>
                    <fullName>High Quality but Inconvenient</fullName>
                </value>
                <value>
                    <fullName>High Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promotion_Price__c</fullName>
        <label>Promotion Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity_of_Kits__c</fullName>
        <label>Quantity of Kits</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Rebate_Paid_In_Bottles__c</fullName>
        <label>Rebate Paid (In Bottles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Rebate_Paid_In_Cash__c</fullName>
        <label>Rebate Paid (In Cash)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Record_Additional_Materials__c</fullName>
        <label>Record Additional Materials</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Refilled_From_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DE Distribution Drive</description>
        <label>Refilled From Store?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Retail_Selling_Price_Bottles__c</fullName>
        <label>Retail Selling Price (Bottles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU_Unit_Type__c</fullName>
        <formula>TEXT(EUR_CRM_SKU__r.EUR_CRM_Unit_Type__c)</formula>
        <label>SKU Unit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU (EU)</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>EUR_CRM_Visit_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Bottles__c</fullName>
        <label>Sell-In Volume (Bottles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Cartons__c</fullName>
        <label>Sell-In Volume (Cartons)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Displays__c</fullName>
        <label>Sell-In Volume (Displays)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Failed_Reason__c</fullName>
        <label>Sell-In Volume Failed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article isn‘t listed in the outlet</fullName>
                </value>
                <value>
                    <fullName>Display not available</fullName>
                </value>
                <value>
                    <fullName>Floor space too small</fullName>
                </value>
                <value>
                    <fullName>Slight rotation</fullName>
                </value>
                <value>
                    <fullName>No cooperation required</fullName>
                </value>
                <value>
                    <fullName>No Advertisement</fullName>
                </value>
                <value>
                    <fullName>Shop Partner Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Grouping_Type__c</fullName>
        <label>Sell-In Volume (Grouping Type)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Liters__c</fullName>
        <label>Sell-In Volume (Liters)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Pallets_Bundles__c</fullName>
        <label>Sell-In-Volume (Pallets/Bundles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_SKUs__c</fullName>
        <label>Sell-In Volume (SKUs)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Total_Bottles__c</fullName>
        <label>Sell-In Volume (Total Bottles)</label>
        <summarizedField>EUR_CRM_Visit_Sub_Action__c.EUR_CRM_Number_of_Bottles__c</summarizedField>
        <summaryForeignKey>EUR_CRM_Visit_Sub_Action__c.EUR_CRM_Visit_Action__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_In_Volume_Total_SKU_Bottles__c</fullName>
        <formula>IF(  RecordType.DeveloperName = &apos;EUR_DE_OFF_Sales_Drive_SKU_Bottles_Sell_In_Qty&apos;,
 CASE(EUR_CRM_Grouping_Type__c,
&apos;Carton&apos;,
EUR_CRM_Sell_In_Volume_Grouping_Type__c* EUR_CRM_Unit_of_Measure__c, 
&apos;Bottle&apos;
, EUR_CRM_Sell_In_Volume_Grouping_Type__c*EUR_CRM_Unit_of_Measure__c, 0),
(
CASE(
EUR_CRM_SKU_Unit_Type__c,
&apos;Display (Standard)&apos;,
EUR_CRM_Sell_In_Volume_SKUs__c*EUR_CRM_SKU__r.EUR_CRM_Number_of_Bottles__c, 
&apos;Display (Promotional)&apos;,
EUR_CRM_Sell_In_Volume_SKUs__c*EUR_CRM_SKU__r.EUR_CRM_Number_of_Bottles__c, 0)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell-In Volume (Total SKU Bottles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sell_Out_Volume_Liters__c</fullName>
        <description>Initially for RU ON Trade Phase 1 &amp; 2</description>
        <label>Sell-Out Volume (Liters)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>